--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5ed684ca5d871a001228b0b2&product=inline-share-buttons" async="async" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5ed684ca5d871a001228b0b2&product=inline-share-buttons" async="async" ></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes" />
