--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
   <meta property="og:title" content="Spotly" />
   <!-- <meta name="twitter:title" content="Spotly" /> -->
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/favicon.ico" type="image/x-icon" />
+  <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
+ 
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <base href="https://designmodo.com/slides/app/">
   <!-- Compressed Styles -->
